templateconfdir=$(sysconfdir)/mio/template

adapterstemplateconfdir=$(templateconfdir)/adapters/
adapterstemplateconf_DATA = adapters/bacnet.xml adapters/firefly.xml adapters/modbus.xml adapters/phillips_gateway.xml adapters/pup.xml  

devicesconfdir=$(templateconfdir)/devices/

automatrixconfdir=$(devicesconfdir)/american-automatrix
automatrixconf_DATA = devices/american-automatrix/DX1.xml

eigconfdir=$(devicesconfdir)/eig
eigconf_DATA = devices/eig/eig-shark.xml

enfuseconfdir=$(devicesconfdir)/enfuse
enfuseconf_DATA = devices/enfuse/enfuse.xml

fireflyconfdir=$(devicesconfdir)/firefly
fireflyconf_DATA = devices/firefly/gpio.xml devices/firefly/environmental.xml devices/firefly/plug_meter.xml #devices/firefly/environmentalv2.xml

lutronconfdir=$(devicesconfdir)/lutron
lutronconf_DATA = devices/lutron/quantum.xml


millenialnetconfdir=$(devicesconfdir)/millenialnet
millenialnetconf_DATA = devices/millenialnet/wistat.xml


phillipsconfdir=$(devicesconfdir)/phillips
phillipsconf_DATA = devices/phillips/phillips_bulb.xml


